[project]
name = "memebot"
version = "0.1.0"
description = "A Discord bot for finding relevant memes."
authors = [{ name = "Nouamane Tazi" }, { name = "Abdellah Kadem" }]
dependencies = [
    "discord.py",
    "pandas",
    "numpy",
    "python-dotenv",
    "sentence_transformers",
    "chromadb",
    "huggingface_hub",
    "gradio_client",
]
requires-python = ">=3.8"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
